Simply class generation.